--- a/Genel-Mudur-Mesaji.html
+++ b/Genel-Mudur-Mesaji.html
@@ -213,96 +213,60 @@
         <div class="stricky-header stricky-header--style1 stricked-menu main-menu">
             <div class="sticky-header__content"></div><!-- /.sticky-header__content -->
         </div><!-- /.stricky-header -->
+        <section class="blog-details section-space">
+  <div class="container">
+    
+    <!-- Sayfa Başlığı -->
+    <div class="section-title text-center">
+      <h2>Genel Müdür Mesajı</h2>
+      <div class="section-title__line"></div>
+    </div>
 
-       <!--Start Blog Details-->
-        <!--Start Blog Details (Simplified)-->
-        <section class="blog-details">
-    <div class="container">
-        <div class="blog-details__content">
+    <div class="blog-details__content two-col-layout">
 
-            <!-- Blog Görseli -->
-            <div class="blog-details__content-img1 ">
-                <div class="inner ">
-                    <img lazy="loading"  src="assets/images/resources/APR04716-scaled.webp" alt="Genel Müdür Görseli">
-                </div>
-            </div>
-
-            <!-- Blog Başlığı ve İçerik -->
-            <div class="blog-details__content-text1">
-                <h2>Güvenli ve Konforlu Taşıma Hizmetleri</h2>
-                <p>
-                    Ekibimizin özverisi ve deneyimi, her yolculuğu güvenli ve konforlu hale getirir. Öğrenci servisinden kurumsal taşımaya kadar, her hizmetimizi titizlikle yürütüyoruz. 
-                </p>
-            </div>
-
-            <!-- Alt Başlık -->
-            <div class="blog-details__content-text2">
-                <h3>Müşteri Memnuniyeti ve Güven Önceliğimiz</h3>
-                <p>
-                    Tüm taşımacılık hizmetlerimizde güvenlik ve zamanında ulaşım önceliğimizdir. Her yolculukta konfor, güven ve müşteri memnuniyetini en üst düzeyde sağlamayı hedefliyoruz.
-                </p>
-            </div>
-
-            <!-- Video ve Liste -->
-            <div class="blog-details__content-text3">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <ul class="blog-details__list">
-                            <li><i class="fa-solid fa-check"></i> Öğrenci ve personel taşımasında güvenli sürüş</li>
-                            <li><i class="fa-solid fa-check"></i> Zamanında ve planlı seferler</li>
-                            <li><i class="fa-solid fa-check"></i> Modern ve konforlu araç filosu</li>
-                            <li><i class="fa-solid fa-check"></i> Müşteri memnuniyetini her zaman ön planda tutuyoruz</li>
-                        </ul>
-                    </div>
-
-                    <div class="col-lg-6">
-                        <div class="blog-details__video">
-                            <a href="https://www.youtube.com/watch?v=Get7rqXYrbQ" class="video-popup">
-                                <div class="blog-details__video-icon">
-                                    <i class="fa-solid fa-play"></i>
-                                </div>
-                            </a>
-                            <img lazy="loading"  src="assets/images/resources/okul-tasimaciligi.webp" alt="Genel Müdür Video">
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Son Paragraf -->
-            <div class="blog-details__content-text4">
-                <p>
-                    Yenilikçi çözümler ve deneyimli kadromuz ile her taşımacılık operasyonunu güvenli, konforlu ve sorunsuz bir şekilde gerçekleştirmekteyiz. Amacımız, her yolculuğu unutulmaz ve güvenli kılmaktır.
-                </p>
-            </div>
-
+      <!-- Sol: Görsel -->
+      <div class="blog-details__content-img1 col-left">
+        <div class="inner">
+          <img loading="lazy"
+               src="assets/images/resources/APR04716-scaled.webp"
+               alt="Genel Müdür Görseli">
         </div>
-    </div><style>
-        .blog-details__video {
-    position: relative;
-    display: inline-block;
-}
+      </div>
 
-.blog-details__video img {
-    width: 100%;
-    display: block;
-}
+      <!-- Sağ: Başlık ve içerik -->
+      <div class="blog-details__content-text1 col-right">
+        <h2>Güvenli ve Konforlu Taşıma Hizmetleri</h2>
+        <p class="lead">
+          Ekibimizin özverisi ve deneyimi, her yolculuğu güvenli ve konforlu hale getirir. Öğrenci servisinden kurumsal taşımaya kadar, her hizmetimizi titizlikle yürütüyoruz.
+        </p>
 
-.blog-details__video-icon {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 50px; /* İstediğin boyutu ayarla */
-    color: white; /* Buton rengi */
-    cursor: pointer;
-    z-index: 2;
-}
+        <h3>Müşteri Memnuniyeti ve Güven Önceliğimiz</h3>
+        <p>
+          Tüm taşımacılık hizmetlerimizde güvenlik ve zamanında ulaşım önceliğimizdir. Her yolculukta konfor, güven ve müşteri memnuniyetini en üst düzeyde sağlamayı hedefliyoruz.
+        </p>
 
-    </style>    
+        <ul class="blog-details__list">
+          <li><i class="fa-solid fa-check"></i> Öğrenci ve personel taşımasında güvenli sürüş</li>
+          <li><i class="fa-solid fa-check"></i> Zamanında ve planlı seferler</li>
+          <li><i class="fa-solid fa-check"></i> Modern ve konforlu araç filosu</li>
+          <li><i class="fa-solid fa-check"></i> Müşteri memnuniyetini her zaman ön planda tutuyoruz</li>
+        </ul>
+
+        <p class="mt-20">
+          Yenilikçi çözümler ve deneyimli kadromuz ile her taşımacılık operasyonunu güvenli, konforlu ve sorunsuz bir şekilde gerçekleştirmekteyiz. Amacımız, her yolculuğu unutulmaz ve güvenli kılmaktır.
+        </p>
+      </div>
+
+    </div>
+  </div>
 </section>
 
 
-        <!--End Blog Details-->
+
+
+
+
+
 
         <footer class="footer-one">
              <a href="https://wa.me/905426194939" class="float-btn-whatsapp" target="_blank" aria-label="WhatsApp">
