--- a/Kisisel-Verilerin-Korunmasi.html
+++ b/Kisisel-Verilerin-Korunmasi.html
@@ -215,107 +215,97 @@
             <div class="sticky-header__content"></div><!-- /.sticky-header__content -->
         </div><!-- /.stricky-header -->
 
-       <!--Start Kişisel Verilerin Korunması (Simplified)-->
-        <section class="blog-details">
-            <div class="container">
-                <div class="blog-details__content">
+       <!--Start Kişisel Verilerin Korunması-->
+        <section class="privacy-section">
+        <div class="container">
+            <div class="privacy-content">
 
-                    <!-- Üst Görsel -->
-                    <div class="blog-details__content-img1">
-                        <div class="inner">
-                            <img lazy="loading"  src="assets/images/resources/interior-of-a-regular-intercity-bus-2024-10-21-11-26-34-utc.webp" alt="Kişisel Verilerin Korunması Görseli">
-                        </div>
-                    </div>
+            <!-- Başlık -->
+            <div class="privacy-heading text-center">
+                <h2>Kişisel Verilerin Korunması Hakkında Aydınlatma Metni</h2>
+                <p>
+                6698 sayılı Kişisel Verilerin Korunması Kanunu (“KVKK”) uyarınca, 
+                <strong>Alber Turizm</strong> olarak kişisel verilerinizin gizliliğine büyük önem veriyoruz.
+                Bu metin, verilerinizin nasıl işlendiğini ve haklarınızı açıklamak amacıyla hazırlanmıştır.
+                </p>
+            </div>
 
-                    <!-- Başlık -->
-                    <div class="blog-details__content-text1">
-                        <h2>Kişisel Verilerin Korunması Hakkında Aydınlatma Metni</h2>
-                        <p>
-                            6698 sayılı Kişisel Verilerin Korunması Kanunu (“KVKK”) uyarınca, 
-                            <strong>Alber Turizm</strong> olarak, kişisel verilerinizin gizliliğine büyük önem veriyoruz. 
-                            Bu metin, kişisel verilerinizin hangi amaçlarla, nasıl işlendiğini ve haklarınızı 
-                            sizlere açıklamak amacıyla hazırlanmıştır.
-                        </p>
-                    </div>
+            <!-- Bölüm 1 -->
+            <div class="privacy-block">
+                <h3>1. Kişisel Verilerin Toplanma Yöntemi ve Hukuki Sebebi</h3>
+                <p>
+                Kişisel verileriniz; web sitemiz, e-posta, çağrı merkezi, sosyal medya ve fiziksel formlar aracılığıyla toplanmaktadır. 
+                Bu veriler, KVKK’nın 5. ve 6. maddelerinde belirtilen hukuki sebepler çerçevesinde işlenmektedir.
+                </p>
+            </div>
 
-                    <!-- Alt Başlık -->
-                    <div class="blog-details__content-text2">
-                        <h3>1. Kişisel Verilerin Toplanma Yöntemi ve Hukuki Sebebi</h3>
-                        <p>
-                            Kişisel verileriniz; web sitemiz, e-posta, çağrı merkezi, sosyal medya ve fiziksel formlar 
-                            aracılığıyla toplanmaktadır. Bu veriler, KVKK’nın 5. ve 6. maddelerinde belirtilen 
-                            hukuki sebepler çerçevesinde işlenmektedir.
-                        </p>
-                    </div>
+            <!-- Bölüm 2 -->
+            <div class="privacy-block">
+                <h3>2. Kişisel Verilerin İşlenme Amaçları</h3>
+                <ul class="privacy-list">
+                <li><i class="fa-solid fa-check"></i> Hizmet taleplerinizin yerine getirilmesi</li>
+                <li><i class="fa-solid fa-check"></i> Müşteri memnuniyetinin artırılması</li>
+                <li><i class="fa-solid fa-check"></i> Faturalandırma ve muhasebe süreçlerinin yürütülmesi</li>
+                <li><i class="fa-solid fa-check"></i> Yasal yükümlülüklerin yerine getirilmesi</li>
+                <li><i class="fa-solid fa-check"></i> Pazarlama ve bilgilendirme faaliyetleri (onayınız dahilinde)</li>
+                </ul>
+            </div>
 
-                    <!-- Liste -->
-                    <div class="blog-details__content-text3">
-                        <h3>2. Kişisel Verilerin İşlenme Amaçları</h3>
-                        <ul class="blog-details__list">
-                            <li><i class="fa-solid fa-check"></i> Hizmet taleplerinizin yerine getirilmesi</li>
-                            <li><i class="fa-solid fa-check"></i> Müşteri memnuniyetinin artırılması</li>
-                            <li><i class="fa-solid fa-check"></i> Faturalandırma ve muhasebe süreçlerinin yürütülmesi</li>
-                            <li><i class="fa-solid fa-check"></i> Yasal yükümlülüklerin yerine getirilmesi</li>
-                            <li><i class="fa-solid fa-check"></i> Pazarlama ve bilgilendirme faaliyetlerinin yürütülmesi (onayınız dahilinde)</li>
-                        </ul>
-                    </div>
-
-                    <!-- Görsel / Video Alanı -->
-                    <div class="blog-details__content-img2">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="single-img">
-                                    <img lazy="loading"  src="assets/images/blog/data-protection1.webp" alt="">
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="single-img">
-                                    <img lazy="loading"  src="assets/images/blog/data-protection2.webp" alt="">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Alt Başlık -->
-                    <div class="blog-details__content-text2">
-                        <h3>3. Kişisel Verilerin Aktarılması</h3>
-                        <p>
-                            Kişisel verileriniz, yasal zorunluluklar kapsamında ve hizmetin gerekliliği ölçüsünde;
-                            iş ortaklarımız, tedarikçilerimiz, resmi kurumlar veya yurt içi/yurt dışı hizmet sağlayıcılarımızla paylaşılabilir.
-                            Bu aktarım, sadece KVKK’da belirtilen ilkelere uygun olarak yapılmaktadır.
-                        </p>
-                    </div>
-
-                    <div class="blog-details__content-text2">
-                        <h3>4. Veri Sahibi Olarak Haklarınız</h3>
-                        <p>KVKK’nın 11. maddesi kapsamında, kişisel verilerinizle ilgili olarak aşağıdaki haklara sahipsiniz:</p>
-                        <ul class="blog-details__list">
-                            <li><i class="fa-solid fa-check"></i> Kişisel verilerinizin işlenip işlenmediğini öğrenme</li>
-                            <li><i class="fa-solid fa-check"></i> İşlenmişse buna ilişkin bilgi talep etme</li>
-                            <li><i class="fa-solid fa-check"></i> Amacına uygun kullanılıp kullanılmadığını öğrenme</li>
-                            <li><i class="fa-solid fa-check"></i> Düzeltme, silme veya anonimleştirme talep etme</li>
-                            <li><i class="fa-solid fa-check"></i> Yurt içi veya yurt dışı aktarım hakkında bilgi alma</li>
-                        </ul>
-                    </div>
-
-                    <!-- Son Paragraf -->
-                    <div class="blog-details__content-text4">
-                        <h3>5. İletişim</h3>
-                        <p>
-                            KVKK kapsamında yukarıda belirtilen haklarınıza ilişkin taleplerinizi 
-                            <a href="mailto:destek@alberturizm.com">destek@alberturizm.com</a> 
-                            adresine e-posta göndererek veya yazılı şekilde tarafımıza iletebilirsiniz.
-                        </p>
-                        <p>
-                            <strong>Alber Turizm</strong> olarak, kişisel verilerinizin güvenliğini sağlamak için gerekli 
-                            tüm teknik ve idari tedbirleri alıyoruz.
-                        </p>
-                    </div>
-
+            <!-- Görseller -->
+            <div class="privacy-gallery row">
+                <div class="col-md-6">
+                <div class="gallery-item">
+                    <img loading="lazy" src="assets/images/blog/data-protection1.webp" alt="">
+                </div>
+                </div>
+                <div class="col-md-6">
+                <div class="gallery-item">
+                    <img loading="lazy" src="assets/images/blog/data-protection2.webp" alt="">
+                </div>
                 </div>
             </div>
+
+            <!-- Bölüm 3 -->
+            <div class="privacy-block">
+                <h3>3. Kişisel Verilerin Aktarılması</h3>
+                <p>
+                Kişisel verileriniz, yasal zorunluluklar kapsamında ve hizmetin gerekliliği ölçüsünde;
+                iş ortaklarımız, tedarikçilerimiz, resmi kurumlar veya yurt içi/yurt dışı hizmet sağlayıcılarımızla paylaşılabilir.
+                Bu aktarım, yalnızca KVKK’da belirtilen ilkelere uygun olarak yapılmaktadır.
+                </p>
+            </div>
+
+            <!-- Bölüm 4 -->
+            <div class="privacy-block">
+                <h3>4. Veri Sahibi Olarak Haklarınız</h3>
+                <p>KVKK’nın 11. maddesi kapsamında, aşağıdaki haklara sahipsiniz:</p>
+                <ul class="privacy-list">
+                <li><i class="fa-solid fa-check"></i> Kişisel verilerinizin işlenip işlenmediğini öğrenme</li>
+                <li><i class="fa-solid fa-check"></i> İşlenmişse buna ilişkin bilgi talep etme</li>
+                <li><i class="fa-solid fa-check"></i> Amacına uygun kullanılıp kullanılmadığını öğrenme</li>
+                <li><i class="fa-solid fa-check"></i> Düzeltme, silme veya anonimleştirme talep etme</li>
+                <li><i class="fa-solid fa-check"></i> Yurt içi veya yurt dışı aktarım hakkında bilgi alma</li>
+                </ul>
+            </div>
+
+            <!-- Son Paragraf -->
+            <div class="privacy-block">
+                <h3>5. İletişim</h3>
+                <p>
+                KVKK kapsamındaki taleplerinizi 
+                <a href="mailto:destek@alberturizm.com">destek@alberturizm.com</a> adresine e-posta göndererek veya
+                yazılı şekilde tarafımıza iletebilirsiniz.
+                </p>
+                <p>
+                <strong>Alber Turizm</strong> olarak kişisel verilerinizin güvenliği için gerekli tüm teknik ve idari tedbirleri alıyoruz.
+                </p>
+            </div>
+
+            </div>
+        </div>
         </section>
         <!--End Kişisel Verilerin Korunması-->
+
 
 
         <!--End Blog Details-->
