--- a/about.html
+++ b/about.html
@@ -185,7 +185,7 @@
                                                         <li class="dropdown">
                                                             <a href="#">Hizmetler</a>
                                                             <ul>
-                                                                <li><a href="service.html">Personel Taşımacılığı></a></li>
+                                                                <li><a href="service.html">Personel Taşımacılığı</a></li>
                                                                 <li><a href="Ogrenci-service.html">Öğrenci Taşımacılığı </a></li>
                                                                 <li><a href="filo-service.html">Filo Kiralama</a></li>
                                                                 <li><a href="arac-service.html">Araç Filomuz</a></li>
