--- a/is-Ortaklarimiz.html
+++ b/is-Ortaklarimiz.html
@@ -214,138 +214,166 @@
         <div class="stricky-header stricky-header--style1 stricked-menu main-menu">
             <div class="sticky-header__content"></div><!-- /.sticky-header__content -->
         </div><!-- /.stricky-header -->
-
-    <section class="partners-grid">
-    <div class="container">
-        <div class="sec-title text-center">
-            <h2>İş Ortaklarımız</h2>
-            <p>Güçlü iş birlikleriyle büyüyoruz ve birlikte başarıyoruz.</p>
-        </div>
-        <div class="row justify-content-center">
-            <!-- İş Ortağı 1 -->
-            <div class="col-12 col-md-6">
-                <div class="partner-item">
-                    <img lazy="loading"  src="assets/images/resources/atasay.webp" alt="Partner 1">
-                    <h4>Partner 1</h4>
-                    <p>Kurumsal taşımacılık çözümlerinde stratejik ortağımız.</p>
-                </div>
-            </div>
-
-            <!-- İş Ortağı 2 -->
-            <div class="col-12 col-md-6">
-                <div class="partner-item">
-                    <img lazy="loading"  src="assets/images/resources/Yeni Proje (5).webp" alt="Partner 2">
-                    <h4>Partner 2</h4>
-                    <p>Teknoloji ve filo yönetiminde dijital dönüşüm desteği.</p>
-                </div>
-            </div>
-
-            <!-- İş Ortağı 3 -->
-            <div class="col-12 col-md-6">
-                <div class="partner-item">
-                    <img lazy="loading"  src="assets/images/resources/images.png" alt="Partner 3">
-                    <h4>Partner 3</h4>
-                    <p>Servis ve bakım süreçlerinde güvenilir çözüm ortağımız.</p>
-                </div>
-            </div>
-
-            <!-- İş Ortağı 4 -->
-            <div class="col-12 col-md-6">
-                <div class="partner-item">
-                    <img lazy="loading"  src="assets/images/resources/edenered.webp" alt="Partner 4">
-                    <h4>Partner 4</h4>
-                    <p>Akaryakıt ve lojistik destek alanında güçlü iş birliğimiz.</p>
-                </div>
-            </div>
-
-            <!-- İş Ortağı 5 -->
-            <div class="col-12 col-md-6">
-                <div class="partner-item">
-                    <img lazy="loading"  src="assets/images/resources/atasay.webp" alt="Partner 5">
-                    <h4>Partner 5</h4>
-                    <p>Yurtiçi taşıma çözümlerinde uzun vadeli ortağımız.</p>
-                </div>
-            </div>
-
-            <!-- İş Ortağı 6 -->
-            <div class="col-12 col-md-6">
-                <div class="partner-item">
-                    <img lazy="loading"  src="assets/images/resources/is1.webp" alt="Partner 6">
-                    <h4>Partner 6</h4>
-                    <p>Lojistik altyapı çözümleriyle operasyonel desteğimiz.</p>
-                </div>
-            </div>
-        </div>
+        <section class="partners">
+  <div class="container">
+    <div class="partners__title text-center">
+      <h2>İş Ortaklarımız</h2>
+      <p>Güçlü iş birlikleriyle büyüyor, birlikte başarıya ulaşıyoruz.</p>
     </div>
+
+    <div class="partners__grid">
+      <div class="partner-card">
+        <div class="partner-logo">
+          <img src="assets/images/resources/atasay.webp" alt="Atasay" loading="lazy">
+        </div>
+        <div class="partner-info">
+          <h4>Atasay</h4>
+          <p>Kurumsal taşımacılık çözümlerinde stratejik iş ortağımız.</p>
+        </div>
+      </div>
+
+      <div class="partner-card">
+        <div class="partner-logo">
+          <img src="assets/images/resources/Yeni Proje (5).webp" alt="Partner 2" loading="lazy">
+        </div>
+        <div class="partner-info">
+          <h4>Partner 2</h4>
+          <p>Teknoloji ve filo yönetiminde dijital dönüşüm desteği.</p>
+        </div>
+      </div>
+
+      <div class="partner-card">
+        <div class="partner-logo">
+          <img src="assets/images/resources/images.png" alt="Partner 3" loading="lazy">
+        </div>
+        <div class="partner-info">
+          <h4>Partner 3</h4>
+          <p>Servis ve bakım süreçlerinde güvenilir çözüm ortağımız.</p>
+        </div>
+      </div>
+
+      <div class="partner-card">
+        <div class="partner-logo">
+          <img src="assets/images/resources/edenered.webp" alt="Partner 4" loading="lazy">
+        </div>
+        <div class="partner-info">
+          <h4>Partner 4</h4>
+          <p>Akaryakıt ve lojistik destek alanında güçlü iş birliğimiz.</p>
+        </div>
+      </div>
+
+      <div class="partner-card">
+        <div class="partner-logo">
+          <img src="assets/images/resources/is1.webp" alt="Partner 5" loading="lazy">
+        </div>
+        <div class="partner-info">
+          <h4>Partner 5</h4>
+          <p>Lojistik altyapı çözümleriyle operasyonel desteğimiz.</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
 
 <style>
-.partners-grid {
-    padding: 80px 0;
-    background: #f9f9f9;
-}
-.sec-title h2 {
-    font-size: 32px;
-    font-weight: 700;
-    margin-bottom: 10px;
-}
-.sec-title p {
-    color: #666;
-    margin-bottom: 50px;
+.partners {
+  padding: 100px 0;
+  background: linear-gradient(to bottom, #ffffff, #f7f9fc);
 }
 
-/* Partner kartları */
-.partner-item {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    text-align: center;
-    padding: 20px;
-    height: 320px;          /* Sabit yükseklik */
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    margin: 10px 0;
-    transition: all 0.3s ease;
+.partners__title h2 {
+  font-size: 36px;
+  font-weight: 800;
+  color: #1b1b1b;
+  position: relative;
+  display: inline-block;
+  margin-bottom: 20px;
 }
 
-.partner-item img {
-    max-width: 100%;
-    max-height: 120px;      /* Logo boyutu sabit */
-    object-fit: contain;    /* Resim bozulmasın */
-    margin-bottom: 15px;
+.partners__title h2::after {
+  content: "";
+  display: block;
+  width: 80px;
+  height: 4px;
+  background: #007bff;
+  margin: 10px auto 0;
+  border-radius: 2px;
+  transition: width 0.3s ease;
 }
 
-.partner-item:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 4px 20px rgba(0,0,0,0.15);
+.partners__title h2:hover::after {
+  width: 120px;
 }
 
-.partner-item h4 {
-    font-size: 18px;
-    font-weight: 600;
-    color: #222;
-    margin-bottom: 8px;
+.partners__title p {
+  color: #666;
+  font-size: 16px;
+  max-width: 500px;
+  margin: 0 auto 60px;
+  line-height: 1.6;
 }
 
-.partner-item p {
-    font-size: 14px;
-    color: #666;
-    flex-grow: 1; /* Metin kutuyu doldurur */
+.partners__grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 30px;
 }
 
-/* Responsive: Mobilde tek sütun, tablet ve üstünde 2 sütun */
-@media (min-width: 768px) {
-    .partners-grid .col-md-6 {
-        display: flex;
-    }
-    .partners-grid .partner-item {
-        flex: 1;
-    }
+.partner-card {
+  background: #fff;
+  border-radius: 14px;
+  padding: 40px 25px;
+  text-align: center;
+  box-shadow: 0 5px 20px rgba(0,0,0,0.08);
+  transition: all 0.3s ease;
+  cursor: default;
+}
+
+.partner-card:hover {
+  transform: translateY(-8px);
+  box-shadow: 0 8px 25px rgba(0,0,0,0.12);
+}
+
+.partner-logo img {
+  max-width: 160px;
+  height: auto;
+  margin-bottom: 20px;
+  transition: transform 0.3s ease;
+  filter: grayscale(40%);
+}
+
+.partner-card:hover .partner-logo img {
+  transform: scale(1.05);
+  filter: grayscale(0%);
+}
+
+.partner-info h4 {
+  font-size: 18px;
+  font-weight: 600;
+  color: #222;
+  margin-bottom: 8px;
+}
+
+.partner-info p {
+  font-size: 15px;
+  color: #666;
+  line-height: 1.5;
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+  .partners {
+    padding: 60px 0;
+  }
+  .partners__title h2 {
+    font-size: 30px;
+  }
+  .partner-logo img {
+    max-width: 140px;
+  }
 }
 </style>
+
 
 
 
