--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
                                         <div class="main-header-one__bottom-right">
                                             <div class="main-header-one__bottom-right-btn">
-                                                <a href="contact.html">Bize Ulaşın
+                                                <a href="tel:+905426194939">Bize Ulaşın
                                                     <i class="icon-right-arrow21"></i>
                                                 </a>
                                             </div>
