--- a/is-Ortaklarimiz.html
+++ b/is-Ortaklarimiz.html
@@ -196,7 +196,7 @@
 
                                         <div class="main-header-one__bottom-right">
                                             <div class="main-header-one__bottom-right-btn">
-                                                <a href="contact.html">Bize Ulaşın
+                                                <a href="tel:+905426194939">Bize Ulaşın
                                                     <i class="icon-right-arrow21"></i>
                                                 </a>
                                             </div>
@@ -275,104 +275,7 @@
   </div>
 </section>
 
-<style>
-.partners {
-  padding: 100px 0;
-  background: linear-gradient(to bottom, #ffffff, #f7f9fc);
-}
 
-.partners__title h2 {
-  font-size: 36px;
-  font-weight: 800;
-  color: #1b1b1b;
-  position: relative;
-  display: inline-block;
-  margin-bottom: 20px;
-}
-
-.partners__title h2::after {
-  content: "";
-  display: block;
-  width: 80px;
-  height: 4px;
-  background: #007bff;
-  margin: 10px auto 0;
-  border-radius: 2px;
-  transition: width 0.3s ease;
-}
-
-.partners__title h2:hover::after {
-  width: 120px;
-}
-
-.partners__title p {
-  color: #666;
-  font-size: 16px;
-  max-width: 500px;
-  margin: 0 auto 60px;
-  line-height: 1.6;
-}
-
-.partners__grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-  gap: 30px;
-}
-
-.partner-card {
-  background: #fff;
-  border-radius: 14px;
-  padding: 40px 25px;
-  text-align: center;
-  box-shadow: 0 5px 20px rgba(0,0,0,0.08);
-  transition: all 0.3s ease;
-  cursor: default;
-}
-
-.partner-card:hover {
-  transform: translateY(-8px);
-  box-shadow: 0 8px 25px rgba(0,0,0,0.12);
-}
-
-.partner-logo img {
-  max-width: 160px;
-  height: auto;
-  margin-bottom: 20px;
-  transition: transform 0.3s ease;
-  filter: grayscale(40%);
-}
-
-.partner-card:hover .partner-logo img {
-  transform: scale(1.05);
-  filter: grayscale(0%);
-}
-
-.partner-info h4 {
-  font-size: 18px;
-  font-weight: 600;
-  color: #222;
-  margin-bottom: 8px;
-}
-
-.partner-info p {
-  font-size: 15px;
-  color: #666;
-  line-height: 1.5;
-}
-
-/* Responsive */
-@media (max-width: 768px) {
-  .partners {
-    padding: 60px 0;
-  }
-  .partners__title h2 {
-    font-size: 30px;
-  }
-  .partner-logo img {
-    max-width: 140px;
-  }
-}
-</style>
 
 
 
