Güncel site versiyonu eklendi 10 kasım 18.18

--- a/Genel-Mudur-Mesaji.html
+++ b/Genel-Mudur-Mesaji.html
@@ -368,8 +368,9 @@
                                     </div>
 
                                     <p class="footer-one__subscribe-text">
-                                        En güncel tur fırsatlarını, haberleri ve kampanyaları e-posta ile alın.
-                                    </p>
+  En güncel duyurularımızı, hizmet güncellemelerini ve özel kampanyalarımızı e-posta ile alın.
+</p>
+
 
                                     <div class="footer-one__subscribe-form">
                                         <form class="subscribe-form" action="#">
