--- a/contact.html
+++ b/contact.html
@@ -358,7 +358,9 @@
                             <div class="content">
                                 <h2>Telefonlar</h2>
                                 <p>
-                                    <a href="tel:+905426194939">+90 542 619 49 39</a>
+                                    <a href="tel:+905426194939">0 (542) 619 49 39</a>
+                                    <a href="tel:+905426194939"> 444 4 097</a>
+
                                 </p>
                             </div>
                         </li>
@@ -460,7 +462,7 @@
                                             <li>
                                                 <div class="icon"><span class="icon-phone"></span></div>
                                                 <div class="text-box">
-                                    <a href="tel:+905426194939">+90 542 619 49 39</a>
+                                    <a href="tel:+905426194939">+90542 619 49 39</a>
                                                 </div>
                                             </li>
                                         </ul>
@@ -476,8 +478,9 @@
                                     </div>
 
                                     <p class="footer-one__subscribe-text">
-                                        En güncel tur fırsatlarını, haberleri ve kampanyaları e-posta ile alın.
-                                    </p>
+  En güncel duyurularımızı, hizmet güncellemelerini ve özel kampanyalarımızı e-posta ile alın.
+</p>
+
 
                                     <div class="footer-one__subscribe-form">
                                         <form class="subscribe-form" action="#">
