--- a/is-Ortaklarimiz.html
+++ b/is-Ortaklarimiz.html
@@ -214,66 +214,54 @@
         <div class="stricky-header stricky-header--style1 stricked-menu main-menu">
             <div class="sticky-header__content"></div><!-- /.sticky-header__content -->
         </div><!-- /.stricky-header -->
+
+
         <section class="partners">
   <div class="container">
     <div class="partners__title text-center">
       <h2>İş Ortaklarımız</h2>
-      <p>Güçlü iş birlikleriyle büyüyor, birlikte başarıya ulaşıyoruz.</p>
+      <p>Güven, kalite ve iş birliğiyle sürdürülebilir başarıya birlikte ulaşıyoruz.</p>
     </div>
 
     <div class="partners__grid">
+
+      <!-- Partner 1 -->
       <div class="partner-card">
         <div class="partner-logo">
           <img src="assets/images/resources/atasay.webp" alt="Atasay" loading="lazy">
         </div>
         <div class="partner-info">
           <h4>Atasay</h4>
-          <p>Kurumsal taşımacılık çözümlerinde stratejik iş ortağımız.</p>
+          <p>Kurumsal personel taşımacılığı alanında uzun yıllardır güvenilir çözüm ortağımız.</p>
         </div>
       </div>
 
+      <!-- Partner 2 -->
       <div class="partner-card">
         <div class="partner-logo">
-          <img src="assets/images/resources/Yeni Proje (5).webp" alt="Partner 2" loading="lazy">
+          <img src="assets/images/resources/Yeni Proje (5).webp" alt="Medicana" loading="lazy">
         </div>
         <div class="partner-info">
-          <h4>Partner 2</h4>
-          <p>Teknoloji ve filo yönetiminde dijital dönüşüm desteği.</p>
+          <h4>Medicana Hastaneler Grubu</h4>
+          <p>Sağlık personeli ve hasta taşıma operasyonlarında profesyonel taşımacılık desteği sağladığımız değerli partnerimiz.</p>
         </div>
       </div>
 
+      <!-- Partner 3 -->
       <div class="partner-card">
         <div class="partner-logo">
-          <img src="assets/images/resources/images.png" alt="Partner 3" loading="lazy">
+          <img src="assets/images/resources/edenered.webp" alt="Edenred" loading="lazy">
         </div>
         <div class="partner-info">
-          <h4>Partner 3</h4>
-          <p>Servis ve bakım süreçlerinde güvenilir çözüm ortağımız.</p>
+          <h4>Edenred</h4>
+          <p>Akaryakıt, filo ve operasyonel yönetim süreçlerinde dijital çözümleriyle destek aldığımız önemli iş ortağımız.</p>
         </div>
       </div>
 
-      <div class="partner-card">
-        <div class="partner-logo">
-          <img src="assets/images/resources/edenered.webp" alt="Partner 4" loading="lazy">
-        </div>
-        <div class="partner-info">
-          <h4>Partner 4</h4>
-          <p>Akaryakıt ve lojistik destek alanında güçlü iş birliğimiz.</p>
-        </div>
-      </div>
-
-      <div class="partner-card">
-        <div class="partner-logo">
-          <img src="assets/images/resources/is1.webp" alt="Partner 5" loading="lazy">
-        </div>
-        <div class="partner-info">
-          <h4>Partner 5</h4>
-          <p>Lojistik altyapı çözümleriyle operasyonel desteğimiz.</p>
-        </div>
-      </div>
     </div>
   </div>
-</section>
+    </section>
+
 
 
 
@@ -382,8 +370,9 @@
                                     </div>
 
                                     <p class="footer-one__subscribe-text">
-                                        En güncel tur fırsatlarını, haberleri ve kampanyaları e-posta ile alın.
+                                    En güncel duyurularımızı, hizmet güncellemelerini ve özel kampanyalarımızı e-posta ile alın.
                                     </p>
+
 
                                     <div class="footer-one__subscribe-form">
                                         <form class="subscribe-form" action="#">
